--- a/css/style.css
+++ b/css/style.css
@@ -573,13 +573,23 @@
       margin: 24px;
       margin: 1.5rem; /* 24px ÷ 16 = 1.5 (24 = 24 × 1) */
    }
-   blockquote .attribution {
-      margin-left: 1.5rem; /* 24px ÷ 16 = 1.5 (24 = 24 × 1) */
-
+   .journalistic {
+      margin-left: 0;
+      border-left: 3px solid #ccc;
+      border-left: 0.1875rem solid #ccc;
+      padding-left: 21px;
+      padding-left: 1.3125rem;
    }
    blockquote .attribution:before {
       content: "— ";
    }
+   .academic .attribution {
+      margin-left: 1.5rem; /* 24px ÷ 16 = 1.5 (24 = 24 × 1) */
+   }
+   .journalistic .attribution {
+      font-style: italic;  
+   }
+
 
 
 /* d) code & pre-formatted text
