--- a/css/style.css
+++ b/css/style.css
@@ -910,9 +910,22 @@ form ul {
       .cf:after { clear: both; }
       .cf { zoom: 1; }
 
+/* nicolas' badass background-image opacity
+ * http://nicolasgallagher.com/css-background-image-hacks
+ */   .bg:before {
+         content: "";
+         position: absolute;
+         z-index: -3;
+         width: 100%;
+         height: 100%;
+         top: 0; 
+         left: 0;
+         opacity: 0.5;
+         background: url(../img/bg.jpg) repeat;
+      }
 
 /* baseline grid
- */   #grid:target {
+ */   #grid:target { /* using :target allows browsing to the hashtag and activating the grid (http://example.com#grid) */
          z-index: 1000;
          background: 
             -webkit-linear-gradient(rgba(0,0,255,0.1) 1px, transparent 1px), 
