--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -52,8 +52,8 @@
   </script>
   
   <!--  stylesheets -->
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/solarized.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/solarized.css">
     
   <!--  modernizr -->
 	<script src="../js/libs/modernizr-2.5.3.min.js"></script>
