--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,7 @@
 {% include post-header.html %}
 
+	<h1 class="hN mega">{{ page.title }}</h1>
+	
 	{{ content }}
 
 	<!-- yaml front-matter tags variable -->
