why will this not fucking work changed a whole bunch of stuff maybe it'll work now

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,6 @@
 {% include post-header.html %}
 
-	<h1 class="hN mega">{{ page.title }}</h1>
+	<h1 class="hN giga">{{ page.title }}</h1>
 	
 	{{ content }}
 
