--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -19,9 +19,9 @@
 
   <!--  app icons: http://mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico">     
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../apple-touch-icon-114x114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../apple-touch-icon-72x72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="../apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.baseurl }}/apple-touch-icon-114x114-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.baseurl }}/apple-touch-icon-72x72-precomposed.png">
+  <link rel="apple-touch-icon-precomposed" href="{{ site.baseurl }}/apple-touch-icon-precomposed.png">
 
   <!--  webfonts -->
   <script type="text/javascript">
@@ -52,11 +52,11 @@
   </script>
   
   <!--  stylesheets -->
-  <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="../css/solarized.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/solarized.css">
     
   <!--  modernizr -->
-	<script src="../js/libs/modernizr-2.5.3.min.js"></script>
+	<script src="{{ site.baseurl }}/js/libs/modernizr-2.5.3.min.js"></script>
 </head>
 
 <body>
