--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,28 +1,9 @@
 {% include post-header.html %}
 	<section role="main">
-		<h1 class="hN giga">{{ page.title }}</h1>
+		<h1 class="hN alpha">{{ page.title }}</h1>
 		
 		{{ content }}
 
-		<!-- yaml front-matter tags variable -->
-		<b>tags:</b><i>{{ page.tags }}</i>
-		<br>
-
-		<!-- use jekyll liquid extension to make tags array human-readable -->
-		<b>human-readable tags:</b><i>{{ page.tags | array_to_sentence_string }}</i>
-		<br>
-		
-		<!-- use liquid for loop to split up array -->
-		<ul>
-			{% for tag in page.tags %}
-				<li>{{ tag }}</li>
-			{% endfor %}
-		</ul>
-		<br>
-
-		<b>category:</b><i>{{ page.category }}</i>
-
-		<!-- custom yaml front-matter variable -->
-		<!-- <b>genre: </b> <i>{{ page.genre }}</i> -->
+		<!-- <p class="freight"><i>{{ page.category }}</i></p> -->
 	</section>
 {% include post-footer.html %}
