add grumble, gridder js

--- a/_includes/post-footer.html
+++ b/_includes/post-footer.html
@@ -10,6 +10,9 @@
   <!--  all plugins and all scripts in one file each, to minimize http requests
         http://html5boilerplate.com/docs/plugins.js-and-script.js -->
   <script src="{{ site.baseurl }}/js/plugins.js"></script>
+
+  <script src="https://raw.github.com/jamescryer/grumble.js/master/js/Bubble.js"></script>
+  <script src="https://raw.github.com/jamescryer/grumble.js/master/js/jquery.grumble.min.js"></script>
   <script src="{{ site.baseurl }}/js/scripts.js"></script>
 
   <!--  asynchronous google analytics, replace 'UA-XXXXX-X'
