--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,11 @@
 {% include post-header.html %}
+	<div id="grid">
 	<section role="main">
 		<h1 class="hN alpha">{{ page.title }}</h1>
-		
+		<a href="#" class="gridder alpha">☰</a>
 		{{ content }}
 
 		<!-- <p class="freight"><i>{{ page.category }}</i></p> -->
 	</section>
+	</div>
 {% include post-footer.html %}
