--- a/_includes/post-header.html
+++ b/_includes/post-header.html
@@ -54,6 +54,7 @@
   <!--  stylesheets -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/solarized.css">
+  <link rel="stylesheet" href="https://raw.github.com/jamescryer/grumble.js/master/css/grumble.min.css">
     
   <!--  modernizr -->
 	<script src="{{ site.baseurl }}/js/libs/modernizr-2.5.3.min.js"></script>
